# necronomy-of-scale

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: run_tests.yaml
src/: settings.toml
src/nos/: __init__.py  assets.py  cards.py  config.py  desktop.py  dice.py  main.py  manifest.py
src/nos/assets/: __init__.py  base.py  cards.py  minions.py
src/nos/creatures/: __init__.py
src/nos/world/: __init__.py  abilities.py  attacks.py  conditions.py  movement.py
src/nos/world/creatures/: __init__.py
tests/: conftest.py  startup_test.py
